@@ -2,8 +2,7 @@ package de.cxp.ocs.smartsuggest;
 
 import static java.util.Collections.singletonList;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.junit.jupiter.api.Assertions.fail;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
@@ -11,10 +10,18 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
 import java.io.IOException;
+import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.concurrent.TimeUnit;
 
+import de.cxp.ocs.smartsuggest.querysuggester.lucene.LuceneQuerySuggester;
+import de.cxp.ocs.smartsuggest.querysuggester.lucene.LuceneSuggesterFactory;
+import de.cxp.ocs.smartsuggest.spi.*;
+import de.cxp.ocs.smartsuggest.updater.LocalCompoundIndexArchiveProvider;
+import de.cxp.ocs.smartsuggest.updater.LocalIndexArchiveProvider;
+import org.awaitility.Awaitility;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
 
@@ -23,18 +30,17 @@ import de.cxp.ocs.smartsuggest.querysuggester.CompoundQuerySuggester;
 import de.cxp.ocs.smartsuggest.querysuggester.QuerySuggester;
 import de.cxp.ocs.smartsuggest.querysuggester.QuerySuggesterProxy;
 import de.cxp.ocs.smartsuggest.querysuggester.Suggestion;
-import de.cxp.ocs.smartsuggest.spi.SuggestDataProvider;
-import de.cxp.ocs.smartsuggest.spi.SuggestRecord;
+import org.junit.jupiter.api.io.TempDir;
 
 class QuerySuggestManagerTest {
 
 	private static final int UPDATE_LATENCY = 2000;
 
-	private String	testTenant1	= "test.1";
-	private String	testTenant2	= "test.2";
+	private String testTenant1 = "test.1";
+	private String testTenant2 = "test.2";
 
-	private RemoteSuggestDataProviderSimulation	serviceMock	= new RemoteSuggestDataProviderSimulation();
-	private QuerySuggestManager					querySuggestManager;
+	private RemoteSuggestDataProviderSimulation serviceMock = new RemoteSuggestDataProviderSimulation();
+	private QuerySuggestManager                 querySuggestManager;
 
 	@AfterEach
 	void afterEach() {
@@ -46,7 +52,7 @@ class QuerySuggestManagerTest {
 		serviceMock.updateSuggestions(testTenant1, Collections.emptyList());
 		querySuggestManager = QuerySuggestManager.builder()
 				.withSuggestDataProvider(serviceMock)
-				.updateRateUnbound(1)
+				.setMinimalUpdateRate()
 				.build();
 
 		QuerySuggester suggester = querySuggestManager.getQuerySuggester(testTenant1);
@@ -64,15 +70,15 @@ class QuerySuggestManagerTest {
 		// some initialization delay + latency
 		Thread.sleep(UPDATE_LATENCY);
 
-		assertThat(suggester.suggest("foo").get(0).getLabel()).isEqualTo("fnord");
-		assertThat(suggester.suggest("bar").get(0).getLabel()).isEqualTo("bart");
+		assertThat(suggester.suggest("foo").getFirst().getLabel()).isEqualTo("fnord");
+		assertThat(suggester.suggest("bar").getFirst().getLabel()).isEqualTo("bart");
 	}
 
 	@Test
 	void twoChannelsBasicTest() throws Exception {
 		querySuggestManager = QuerySuggestManager.builder()
 				.withSuggestDataProvider(serviceMock)
-				.updateRateUnbound(1)
+				.setMinimalUpdateRate()
 				.build();
 
 		serviceMock.updateSuggestions(testTenant1, singletonList(s("foo", "fnord")));
@@ -83,27 +89,27 @@ class QuerySuggestManagerTest {
 
 		// both suggesters are updated at the same time
 		Thread.sleep(UPDATE_LATENCY);
-		assertThat(suggester1.suggest("foo").get(0).getLabel()).isEqualTo("fnord");
-		assertThat(suggester2.suggest("bar").get(0).getLabel()).isEqualTo("bart");
+		assertThat(suggester1.suggest("foo").getFirst().getLabel()).isEqualTo("fnord");
+		assertThat(suggester2.suggest("bar").getFirst().getLabel()).isEqualTo("bart");
 
 		// first suggester should not get a delay because of the second suggester
 		serviceMock.updateSuggestions(testTenant1, singletonList(s("foo", "foofigher")));
-		assertThat(suggester1.suggest("foo").get(0).getLabel()).isEqualTo("fnord");
+		assertThat(suggester1.suggest("foo").getFirst().getLabel()).isEqualTo("fnord");
 		Thread.sleep(UPDATE_LATENCY);
-		assertThat(suggester1.suggest("foo").get(0).getLabel()).isEqualTo("foofigher");
+		assertThat(suggester1.suggest("foo").getFirst().getLabel()).isEqualTo("foofigher");
 	}
 
 	@Test
 	void failingService() throws Exception {
 		querySuggestManager = QuerySuggestManager.builder()
 				.withSuggestDataProvider(serviceMock)
-				.updateRateUnbound(1)
+				.setMinimalUpdateRate()
 				.build();
 
 		serviceMock.updateSuggestions(testTenant1, singletonList(s("foo", "fnord")));
 		QuerySuggester suggester = querySuggestManager.getQuerySuggester(testTenant1, true);
 
-		assertThat(suggester.suggest("foo").get(0).getLabel()).isEqualTo("fnord");
+		assertThat(suggester.suggest("foo").getFirst().getLabel()).isEqualTo("fnord");
 
 		serviceMock.setAvailability(false); // slow service
 		try {
@@ -115,12 +121,12 @@ class QuerySuggestManagerTest {
 		}
 		Thread.sleep(UPDATE_LATENCY);
 		// because of unavailability, the suggestions should not be updated
-		assertThat(suggester.suggest("foo").get(0).getLabel()).isEqualTo("fnord");
+		assertThat(suggester.suggest("foo").getFirst().getLabel()).isEqualTo("fnord");
 
 		serviceMock.setAvailability(true);
 		serviceMock.updateSuggestions(testTenant1, singletonList(s("foo", "foofighter")));
 		Thread.sleep(UPDATE_LATENCY);
-		assertThat(suggester.suggest("foo").get(0).getLabel()).isEqualTo("foofighter");
+		assertThat(suggester.suggest("foo").getFirst().getLabel()).isEqualTo("foofighter");
 	}
 
 	// run this manually to test if the JVM is shutdown although the
@@ -131,11 +137,16 @@ class QuerySuggestManagerTest {
 
 	@Test
 	void testThrowAwayManager() throws Exception {
-		QuerySuggester querySuggester = getQuerySuggester(new RemoteSuggestDataProviderSimulation());
+		var sdp = new RemoteSuggestDataProviderSimulation();
+		sdp.updateSuggestions("test.1", List.of(new SuggestRecord("query1", "matching text", null, null, 10L)));
+		QuerySuggester querySuggester = getQuerySuggester(sdp);
 
 		System.gc();
-		Thread.sleep(10);
-		querySuggester.suggest("foo");
+		Awaitility.await()
+				.atMost(5, TimeUnit.SECONDS)
+				.pollInterval(100, TimeUnit.MILLISECONDS)
+				.until(querySuggester::isReady);
+		assert !querySuggester.suggest("mat").isEmpty();
 	}
 
 	@Test
@@ -143,7 +154,7 @@ class QuerySuggestManagerTest {
 		SuggestDataProvider api = mock(SuggestDataProvider.class);
 		QuerySuggestManagerBuilder querySuggestManagerBuilder = QuerySuggestManager.builder()
 				.withSuggestDataProvider(api)
-				.updateRateUnbound(1);
+				.setMinimalUpdateRate();
 
 		try (QuerySuggestManager qm = querySuggestManagerBuilder.build()) {
 			QuerySuggester noopMapper = qm.getQuerySuggester("noop");
@@ -157,14 +168,14 @@ class QuerySuggestManagerTest {
 	void destroySuggesterTest() throws Exception {
 		querySuggestManager = QuerySuggestManager.builder()
 				.withSuggestDataProvider(serviceMock)
-				.updateRateUnbound(1)
+				.setMinimalUpdateRate()
 				.build();
 
-		serviceMock.updateSuggestions(testTenant1, Arrays.asList(s("foo", "1")));
+		serviceMock.updateSuggestions(testTenant1, singletonList(s("foo", "1")));
 		QuerySuggester suggester = querySuggestManager.getQuerySuggester(testTenant1, true);
 		assertThat(suggester).isNotNull();
 
-		assertThat(suggester.suggest("foo").get(0).getLabel()).isEqualTo("1");
+		assertThat(suggester.suggest("foo").getFirst().getLabel()).isEqualTo("1");
 
 		querySuggestManager.destroyQuerySuggester(testTenant1);
 
@@ -172,7 +183,7 @@ class QuerySuggestManagerTest {
 		assertThat(suggester.suggest("foo")).isEmpty();
 
 		// assert no updates are made anymore
-		serviceMock.updateSuggestions(testTenant1, Arrays.asList(s("foo", "2")));
+		serviceMock.updateSuggestions(testTenant1, singletonList(s("foo", "2")));
 		Thread.sleep(1000);
 		assertThat(suggester.suggest("foo")).isEmpty();
 	}
@@ -187,11 +198,11 @@ class QuerySuggestManagerTest {
 				.withSuggestDataProvider(dp1)
 				.withSuggestDataProvider(dp2)
 				.withSuggestDataProvider(mock)
-				.updateRateUnbound(1)
+				.setMinimalUpdateRate()
 				.build();
 
 		// subtest 1: only one data provider has data
-		dp1.updateSuggestions("index1", Arrays.asList(new SuggestRecord("query1", "matching text", null, null, 10L)));
+		dp1.updateSuggestions("index1", List.of(new SuggestRecord("query1", "matching text", null, null, 10L)));
 		QuerySuggester querySuggester1 = querySuggestManager.getQuerySuggester("index1", true);
 
 		assertTrue(querySuggester1 instanceof QuerySuggesterProxy, "but was instanceof " + querySuggester1.getClass().getCanonicalName());
@@ -202,8 +213,8 @@ class QuerySuggestManagerTest {
 		assertThat(suggestions1).allMatch(s -> "query1".equals(s.getLabel())).as("query1 as label expected");
 
 		// subtest 2: two data providers have data
-		dp1.updateSuggestions("index2", Arrays.asList(new SuggestRecord("query 1.2", "arbitrary matching text", null, null, 10L)));
-		dp2.updateSuggestions("index2", Arrays.asList(new SuggestRecord("query 2.2", "more matching text", null, null, 10L)));
+		dp1.updateSuggestions("index2", List.of(new SuggestRecord("query 1.2", "arbitrary matching text", null, null, 10L)));
+		dp2.updateSuggestions("index2", List.of(new SuggestRecord("query 2.2", "more matching text", null, null, 10L)));
 		QuerySuggester querySuggester2 = querySuggestManager.getQuerySuggester("index2", true);
 
 		verify(mock, times(1)).hasData("index2");
@@ -213,9 +224,86 @@ class QuerySuggestManagerTest {
 		assertThat(suggestions2).allMatch(s -> s.getLabel().endsWith("2"));
 	}
 
+	@Test
+	void testSuggesterIsInitializedByArchiveDataProviders(@TempDir Path baseDir) throws Exception {
+		LocalIndexArchiveProvider archiveProvider = new LocalIndexArchiveProvider();
+		LuceneSuggesterFactory factory = new LuceneSuggesterFactory(baseDir);
+		try (
+				LuceneQuerySuggester suggester = factory.getSuggester(SuggestData.builder()
+						.modificationTime(System.currentTimeMillis()).type("keywords")
+						.suggestRecords(singletonList(s("foo", "tasty food")))
+						.build(), new SuggestConfig())
+		) {
+			IndexArchive indexArchive = factory.createArchive(suggester);
+			archiveProvider.store("index1", indexArchive);
+		}
+
+		querySuggestManager = QuerySuggestManager.builder()
+				.withArchiveDataProvider(archiveProvider)
+				.setMinimalUpdateRate()
+				.build();
+		QuerySuggester querySuggester = querySuggestManager.getQuerySuggester("index1", true);
+		assert querySuggester.isReady();
+		assertEquals(1L, querySuggester.recordCount());
+		assertEquals(1, querySuggester.suggest("foo").size());
+	}
+
+	@Test
+	void testIndexAndRestoreMultipleDataSources_withMerger() throws Exception {
+		testIndexAndRestoreMultipleDataSources(true, new LocalIndexArchiveProvider());
+	}
+
+	@Test
+	void testIndexAndRestoreMultipleDataSources_withCompoundSuggester() throws Exception {
+		testIndexAndRestoreMultipleDataSources(false, new LocalIndexArchiveProvider());
+	}
+
+	@Test
+	void testIndexAndRestoreMultipleDataSources_withCompoundSuggesterAndCompoundArchiver() throws Exception {
+		testIndexAndRestoreMultipleDataSources(false, new LocalCompoundIndexArchiveProvider());
+	}
+
+	private void testIndexAndRestoreMultipleDataSources(boolean enableMerger, IndexArchiveProvider archiveProvider) throws Exception {
+		SuggestConfig config = new SuggestConfig();
+		config.setUseDataSourceMerger(enableMerger);
+
+		RemoteSuggestDataProviderSimulation dp1 = new RemoteSuggestDataProviderSimulation();
+		RemoteSuggestDataProviderSimulation dp2 = new RemoteSuggestDataProviderSimulation();
+		dp1.updateSuggestions("indexA", List.of(new SuggestRecord("query 1.2", "arbitrary matching text", null, null, 10L)));
+		dp2.updateSuggestions("indexA", List.of(new SuggestRecord("query 2.2", "more matching text", null, null, 10L)));
+
+		try (
+				var indexingQSM = QuerySuggestManager.builder()
+						.withSuggestDataProvider(dp1)
+						.withSuggestDataProvider(dp2)
+						.withArchiveDataProvider(archiveProvider)
+						.setMinimalUpdateRate()
+						.withDefaultSuggestConfig(config)
+						.build()
+		) {
+			QuerySuggester suggester = indexingQSM.getQuerySuggester("indexA", true);
+			assert suggester.isReady();
+			assertEquals(2, suggester.recordCount());
+
+			indexingQSM.destroyQuerySuggester("indexA");
+		}
+
+		// recreate query suggester without the suggest-data-providers
+		try (
+				var fetchingQSM = QuerySuggestManager.builder()
+						.withArchiveDataProvider(archiveProvider)
+						.setMinimalUpdateRate()
+						.build()
+		) {
+			QuerySuggester suggester = fetchingQSM.getQuerySuggester("indexA", true);
+			assert suggester.isReady();
+			assertEquals(2, suggester.recordCount());
+		}
+	}
+
 	/**
 	 * internal method that uses the QueryMapperManager in a wrong way.
-	 * 
+	 *
 	 * @param apiStub
 	 * @return
 	 */
@@ -223,15 +311,15 @@ class QuerySuggestManagerTest {
 	private QuerySuggester getQuerySuggester(SuggestDataProvider apiStub) {
 		return QuerySuggestManager.builder()
 				.withSuggestDataProvider(apiStub)
-				.updateRateUnbound(1)
+				.setMinimalUpdateRate()
 				.build()
 				.getQuerySuggester(testTenant1);
 	}
 
-	private SuggestRecord s(String variant, String bestMatch) {
+	private SuggestRecord s(String secondaryText, String primaryText) {
 		SuggestRecord r = new SuggestRecord();
-		r.setPrimaryText(bestMatch);
-		r.setSecondaryText(variant);
+		r.setPrimaryText(primaryText);
+		r.setSecondaryText(secondaryText);
 		return r;
 	}
 
